changing style for the title

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 h1{
-    color: red;
+    color: rgb(197, 161, 161);
 }
 
     body{
-        background-color: aqua;
+        background-color: rgb(138, 201, 57);
     }
